tests/macro-tests/cases/widget_new/incorrect_arg_type1.stderr
error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
 --> cases/widget_new/incorrect_arg_type1.rs:6:18
  |
6 |         margin = true
  |         ------   ^^^^ the trait `IntoVar<SideOffsets>` is not implemented for `bool`
  |         |
  |         required by a bound introduced by this call
  |
  = note: `IntoVar<T>` is implemented for all `T: VarValue`
  = note: `IntoVar<T>` is implemented for `Var<T>`, `ContextVar<T>` and others
  = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `zng::layout::margin::margin`
 --> $WORKSPACE/crates/zng-wgt/src/layout_props.rs
  |
  | pub fn margin(child: impl IntoUiNode, margin: impl IntoVar<SideOffsets>) -> UiNode {
  |                                                ^^^^^^^^^^^^^^^^^^^^ required by this bound in `margin::margin`
